# aurelia-back

./: Procfile  README.md  manage.py  pyproject.toml  setup.py
core/: __init__.py
